--- a/css/dstyl.css
+++ b/css/dstyl.css
@@ -28,8 +28,8 @@ ul {
 p {
     text-align: center;
     font-style: oblique;
-    font-size: 3vw;
-    
+    font-size: 1vw;
+
 }
 
 .btn {
@@ -56,6 +56,9 @@ p {
     margin-right: auto;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    
+    
+    
 }
 
 
@@ -73,9 +76,9 @@ nav {
     color: white;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    position: fixed; 
+    position: fixed !important; 
     transition: 2s;
-
+    z-index: 1;
     -webkit-box-shadow: 0 10px 6px -6px #777;
     -moz-box-shadow: 0 10px 6px -6px #777;
     box-shadow: 0 10px 6px -6px #777;
@@ -83,13 +86,16 @@ nav {
 }
 
 #logo-box {
+    
     width: 40%;
     float: left;
-    padding-top: 0.5rem;
+    
     text-align: justify;
     font-family: 'Caveat', cursive;
 
 }
+
+
 
 #logo-box .logo {
     color: black;
@@ -97,6 +103,7 @@ nav {
     font-size: 1.5vw;
 
 }
+
 
 #nav-links {
     float: right;
@@ -107,9 +114,11 @@ nav {
 #nav-links .nav-item {
     float: left;
     margin: 0.5rem;
+    
 }
 
 #nav-links .nav-link {
+    
     color: black;
     font-size: 1vw;
     font-weight: 700;
@@ -123,17 +132,7 @@ nav {
     color: #1ABC9B;
 }
 
-@media(max-width:400px){
-    .kalk{
-        display: none !important;
-    }
-    .montaj{
-        width: 100% !important;
-        margin-left: 0% !important;
-        margin-right: 0% !important;
-    }
-   
-}
+
 
 
 @media (max-width:800px) {
@@ -196,15 +195,20 @@ a.link {
     margin-right: 10%;
     
     text-align: center;
-    
+
     color: black;
 }
 
+.hizmet p{
 
+  
+   font-size: 150%;
+   
+   position:inherit;
+   text-align: justify;
 
-
-
-
+   color: black;
+}
 .yukarı {
     color: #212529;
     font-size: 2vw;
@@ -230,6 +234,9 @@ a.link {
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+.melih{
+    margin-top: 10%;
+}
 
 .telefon-ara-btn {
     color: white;
@@ -242,7 +249,7 @@ a.link {
     font-weight: 20vw;
     text-align: center;
     justify-content: center;
-    
+
 }
 
 .telefon-ara-btn:hover {
@@ -251,58 +258,121 @@ a.link {
     transition: .5s;
     background: #35a800;
 }
-.call{
+
+.call {
+    
     text-align: center;
     justify-content: center;
 }
 
 
-.foto{
+.foto {
     margin-left: 20%;
     width: 15%;
-    
+
 }
-.foto2{
+
+.foto2 {
     margin-left: 1%;
-    
+
     width: 15%;
-    
+
 }
-.foto1{
-    
-    
+
+.foto1 {
+
+
     margin-top: 2%;
     width: 15%;
 }
-.foto4{
+
+.foto4 {
     margin-right: 15%;
     width: 15%;
 }
 
-#slider{
+#slider {
     margin-top: 10%;
     height: auto;
-    
+
 }
-.mySlides{
-    
+
+.mySlides {
+
     max-width: 100%;
     height: auto;
     text-align: center;
 }
 
-.montaj{
+
+.montaj {
     text-align: center;
-    margin-left: 25%;
-    margin-right: 25%;
-    width: 50%;
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
     height: auto;
-    
-   
-    
+
+
+
 }
 
 img {
     max-width: 100%;
+
+}
+
+.cl{margin-top: 10%;
+    margin-left: 20%;
+}
+
+
+
+
+
+
+@media(max-width:420px) {
     
-  }
+    .kalk {
+        display: none !important;
+    }
+    nav{
+        margin: 0% !important;
+        padding: 2% !important;
+        width: 100% !important;
+        height: 5% !important;
+    }
+    .montaj {
+        width: 85% !important;
+        margin-left: 7.5% !important;
+        margin-right: 7.5% !important;
+    }
+    #logo-box {
+        margin-left: 15% !important;
+        width: 25% !important;
+    }
+
+    #nav-links {
+        
+        font-weight: 2vw !important;
+    }
+    .harita{
+        width: 80% !important;
+        height: auto !important;
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+    }
+    .mySlides {
+        max-width: 85% !important;
+        margin-left: 7.5% !important;
+        margin-right: 7.5 !important;
+    }
+    .hizmet p{
+        font-size: 100% !important;
+        text-align: center !important;
+    }
+    .hakkımızda{
+        font-size: 100% !important;
+        text-align: center !important;
+    }
+    
+}
