--- a/css/iletisim.css
+++ b/css/iletisim.css
@@ -22,6 +22,75 @@
 
 
 }
+
+@media(max-width:1150px) {
+    .iletisim2{
+        margin-top: 7% !important;
+    }
+}
+
+@media(max-width:933px) {
+    .iletisim2{
+        margin-top: 10% !important;
+    }
+
+}
+@media(max-width:900px) {
+    .iletisim2{
+        margin-top: 11% !important;
+    }
+
+}
+
+@media(max-width:769px) {
+    .iletisim2{
+        margin-top: 10% !important;
+    }
+
+}
+
+@media(max-width:550px){
+    .iletisim2{
+        margin-top: 12% !important;
+    }
+}
+@media(max-width:500px){
+    .iletisim2{
+        margin-top: 13% !important;
+    }
+}
+@media(max-width:450px){
+    .iletisim2{
+        margin-top: 14% !important;
+    }
+}
+@media(max-width:420px){
+    .iletisim2{
+        margin-top: 15% !important;
+    }
+}
+@media(max-width:390px){
+    .iletisim2{
+        margin-top: 16% !important;
+    }
+}
+@media(max-width:370px){
+    .iletisim2{
+        margin-top: 17% !important;
+    }
+}
+@media(max-width:350px){
+    .iletisim2{
+        margin-top: 18% !important;
+    }
+}
+@media(max-width:330px){
+    .iletisim2{
+        margin-top: 19% !important;
+    }
+}
+
+
 .iletisim2{
     margin-top: 5%;
 }
